# shared-expenses

./: .gitignore  Readme.md  docker-compose.yml  flake.nix  secrets.yaml
.github/workflows/: ci.yml  deploy.yml  development.yml
frontend/: Dockerfile  angular.json  package-lock.json
frontend/src/: env.d.ts
frontend/src/app/: app.component.html  app.component.ts
infra/: main.tf
nix/: apps.nix
nix/pkgs/: default.nix
nix/pkgs/api-container-push/: default.nix
nix/pkgs/api-lint/: default.nix
nix/pkgs/api-run/: default.nix
nix/pkgs/front-deploy/: default.nix
nix/pkgs/front-lint/: default.nix
nix/pkgs/infra/: default.nix  main.sh
shared-expenses-api/: .dockerignore  Dockerfile  README.md  main.py  mypy.ini  pyproject.toml  ruff.toml
shared-expenses-api/shared_expenses_api/: __init__.py
