[tool.poetry]
name = "shared-expenses-api"
version = "0.1.0"
description = ""
authors = ["Diego Restrepo Mesa <restrepomesadiego@gmail.com>"]
readme = "README.md"
packages = [{include = "shared_expenses_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.12"}
uvicorn = "^0.34.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
