[project]
name = "shared-expenses-api"
version = "0.1.0"
description = ""
authors = [{ name = "Diego Restrepo Mesa", email = "restrepomesadiego@gmail.com" }]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "fastapi[standard]>=0.115.12,<0.116",
    "uvicorn>=0.34.2,<0.35",
    "sqlalchemy>=2.0.41,<3",
    "asyncpg>=0.30.0,<0.31",
    "psycopg2-binary>=2.9.10,<3",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0,<2",
    "ruff>=0.11.11,<0.12",
]

[tool.hatch.build.targets.sdist]
include = ["shared_expenses_api"]

[tool.hatch.build.targets.wheel]
include = ["shared_expenses_api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
